--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <commons-dbcp2.version>2.1.1</commons-dbcp2.version>
         <jta.version>1.1</jta.version>
         <spring-data-jpa.version>1.10.6.RELEASE</spring-data-jpa.version>
+        <jackson-databind.version>2.8.6</jackson-databind.version>
     </properties>
 
     <packaging>war</packaging>
@@ -37,6 +38,14 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${javax.servlet-api.version}</version>
+        </dependency>
+
+
+        <!-- JSON Converter -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
         </dependency>
 
 
@@ -76,6 +85,8 @@
             <artifactId>jta</artifactId>
             <version>${jta.version}</version>
         </dependency>
+
+
 
     </dependencies>
 
